sfdx-source/main/default/objects/User_UI_Event__c/fields/UserUI_Case_Link_was_Clicked_On__c.field-meta.xml
<CustomField>
    <fullName>UserUI_Case_Link_was_Clicked_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Link was Clicked On</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User UI Events</relationshipLabel>
    <relationshipName>User_UI_Events</relationshipName>
    <type>Lookup</type>
</CustomField>