sfdx-source/main/default/objects/User_UI_Event__c/fields/UserUI_Patient_s_Facility__c.field-meta.xml
<CustomField>
    <fullName>UserUI_Patient_s_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient&apos;s Facility</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>User UI Events</relationshipLabel>
    <relationshipName>User_UI_Events</relationshipName>
    <type>Lookup</type>
</CustomField>