sfdx-source/main/default/objects/User_UI_Event__c/fields/UserUI_Provider_s_Name__c.field-meta.xml
<CustomField>
    <fullName>UserUI_Provider_s_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider&apos;s Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_UI_Events</relationshipName>
    <type>Lookup</type>
</CustomField>