sfdx-source/main/default/objects/User_UI_Event__c/fields/UserUI_Time_e911_Link_was_Clicked__c.field-meta.xml
<CustomField>
    <fullName>UserUI_Time_e911_Link_was_Clicked__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time e911 Link was Clicked</label>
    <type>DateTime</type>
</CustomField>